cli/tests/snapshots/pipeline_golden__golden_pipeline_borrow_shared_total.snap
---
source: cli/tests/pipeline_golden.rs
expression: output
---
Diagnostics:
- Warning: Definition 'borrow_shared_total' depends on primitives: Ref, Shared, borrow_shared

DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef borrow_shared_total
  ty: Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn)
  val: Lam(Ind("Nat", []), LetE(App(App(Const("Ref", []), Const("Shared", [])), Ind("Nat", []), #r), App(App(Const("borrow_shared", []), Ind("Nat", [])), Var(0)), Var(1)), Default, Fn)

MirBody borrow_shared_total
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(0, []), ty: Closure(Region(1), [], [Nat], Nat) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Nat], Nat), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Array, 17560580047052612315): AdtLayout { adt: AdtId(Array, 17560580047052612315), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Array, 17560580047052612315), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }], copy_requirements: [[Adt(AdtId(List, 18281496015322716214), [Param(0)])]] }, AdtId(Atomic, 7944917567764537563): AdtLayout { adt: AdtId(Atomic, 7944917567764537563), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Atomic, 7944917567764537563), index: 0 }, fields: [Param(0)] }], copy_requirements: [] }, AdtId(Bool, 1212688576893102294): AdtLayout { adt: AdtId(Bool, 1212688576893102294), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 1 }, fields: [] }], copy_requirements: [[]] }, AdtId(Comp, 5865758043995769001): AdtLayout { adt: AdtId(Comp, 5865758043995769001), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Comp, 5865758043995769001), index: 0 }, fields: [Unit] }, VariantLayout { ctor: CtorId { adt: AdtId(Comp, 5865758043995769001), index: 1 }, fields: [Unit, Unit, Adt(AdtId(Comp, 5865758043995769001), []), Adt(AdtId(Comp, 5865758043995769001), [])] }], copy_requirements: [[Unit]] }, AdtId(Eq, 7478576897359074100): AdtLayout { adt: AdtId(Eq, 7478576897359074100), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Eq, 7478576897359074100), index: 0 }, fields: [] }], copy_requirements: [[]] }, AdtId(False, 6713900616313185601): AdtLayout { adt: AdtId(False, 6713900616313185601), variants: [], copy_requirements: [[]] }, AdtId(Float, 8229766614260782088): AdtLayout { adt: AdtId(Float, 8229766614260782088), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Float, 8229766614260782088), index: 0 }, fields: [Nat] }], copy_requirements: [[Nat]] }, AdtId(Int, 8773799601653308451): AdtLayout { adt: AdtId(Int, 8773799601653308451), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Int, 8773799601653308451), index: 0 }, fields: [Nat] }, VariantLayout { ctor: CtorId { adt: AdtId(Int, 8773799601653308451), index: 1 }, fields: [Nat] }], copy_requirements: [[Nat]] }, AdtId(List, 18281496015322716214): AdtLayout { adt: AdtId(List, 18281496015322716214), variants: [VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 1 }, fields: [Param(0), Adt(AdtId(List, 18281496015322716214), [Param(0)])] }], copy_requirements: [[Param(0)]] }, AdtId(Mutex, 11502663489156599097): AdtLayout { adt: AdtId(Mutex, 11502663489156599097), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Mutex, 11502663489156599097), index: 0 }, fields: [Param(0)] }], copy_requirements: [] }, AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }, AdtId(Option, 6896459664146482351): AdtLayout { adt: AdtId(Option, 6896459664146482351), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Option, 6896459664146482351), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Option, 6896459664146482351), index: 1 }, fields: [Param(0)] }], copy_requirements: [[Param(0)]] }, AdtId(Pair, 4088333189613019898): AdtLayout { adt: AdtId(Pair, 4088333189613019898), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Pair, 4088333189613019898), index: 0 }, fields: [Param(0), Param(1)] }], copy_requirements: [[Param(0), Param(1)]] }, AdtId(RefCell, 16116052685739653519): AdtLayout { adt: AdtId(RefCell, 16116052685739653519), variants: [VariantLayout { ctor: CtorId { adt: AdtId(RefCell, 16116052685739653519), index: 0 }, fields: [Param(0)] }], copy_requirements: [] }, AdtId(Result, 7519764837480953763): AdtLayout { adt: AdtId(Result, 7519764837480953763), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Result, 7519764837480953763), index: 0 }, fields: [Param(0)] }, VariantLayout { ctor: CtorId { adt: AdtId(Result, 7519764837480953763), index: 1 }, fields: [Param(1)] }], copy_requirements: [[Param(0), Param(1)]] }, AdtId(Slice, 17243552778994937024): AdtLayout { adt: AdtId(Slice, 17243552778994937024), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Slice, 17243552778994937024), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }], copy_requirements: [[Adt(AdtId(List, 18281496015322716214), [Param(0)])]] }, AdtId(Text, 333241644820593137): AdtLayout { adt: AdtId(Text, 333241644820593137), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Text, 333241644820593137), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Nat])] }], copy_requirements: [[Adt(AdtId(List, 18281496015322716214), [Nat])]] }, AdtId(VecDyn, 5672451972718783331): AdtLayout { adt: AdtId(VecDyn, 5672451972718783331), variants: [VariantLayout { ctor: CtorId { adt: AdtId(VecDyn, 5672451972718783331), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }], copy_requirements: [[Adt(AdtId(List, 18281496015322716214), [Param(0)])]] }} } }

BorrowCheck borrow_shared_total
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
