cli/tests/snapshots/pipeline_golden__golden_pipeline_id_ref_shared_lifetimes.snap
---
source: cli/tests/pipeline_golden.rs
expression: output
---
Diagnostics:
- Warning: Definition 'use_shared' depends on primitives: Ref, Shared
- Warning: Definition 'use_mut' depends on primitives: Mut, Ref
- Warning: Definition 'id_ref' depends on primitives: Ref, Shared
- Warning: Definition 'safe_id_ref' depends on primitives: Mut, Ref, Shared, borrow_mut, borrow_shared

DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef id_ref
  ty: Pi(App(App(Const("Ref", []), Const("Shared", [])), Ind("Nat", []), #r), App(App(Const("Ref", []), Const("Shared", [])), Ind("Nat", []), #r), Default, Fn)
  val: Lam(App(App(Const("Ref", []), Const("Shared", [])), Ind("Nat", []), #r), Var(0), Default, Fn)

ElaboratedDef safe_id_ref
  ty: Pi(Ind("Nat", []), Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn), Default, Fn)
  val: Lam(Ind("Nat", []), Lam(Ind("Nat", []), LetE(Ind("Nat", []), LetE(App(App(Const("Ref", []), Const("Shared", [])), Ind("Nat", []), #r), App(App(Const("borrow_shared", []), Ind("Nat", [])), Var(1)), LetE(App(App(Const("Ref", []), Const("Shared", [])), Ind("Nat", []), #r), App(Const("id_ref", []), Var(0)), App(Const("use_shared", []), Var(0)))), LetE(App(App(Const("Ref", []), Const("Shared", [])), Ind("Nat", []), #r), App(App(Const("borrow_shared", []), Ind("Nat", [])), Var(1)), LetE(App(App(Const("Ref", []), Const("Shared", [])), Ind("Nat", []), #r), App(Const("id_ref", []), Var(0)), LetE(App(App(Const("Ref", []), Const("Mut", [])), Ind("Nat", []), #r), App(App(Const("borrow_mut", []), Ind("Nat", [])), Var(4)), LetE(Ind("Nat", []), App(Const("use_mut", []), Var(0)), App(Const("use_shared", []), Var(2))))))), Default, Fn), Default, Fn)

ElaboratedDef use_mut
  ty: Pi(App(App(Const("Ref", []), Const("Mut", [])), Ind("Nat", []), #r), Ind("Nat", []), Default, Fn)
  val: Lam(App(App(Const("Ref", []), Const("Mut", [])), Ind("Nat", []), #r), Const("zero", []), Default, Fn)

ElaboratedDef use_shared
  ty: Pi(App(App(Const("Ref", []), Const("Shared", [])), Ind("Nat", []), #r), Ind("Nat", []), Default, Fn)
  val: Lam(App(App(Const("Ref", []), Const("Shared", [])), Ind("Nat", []), #r), Const("zero", []), Default, Fn)

MirBody id_ref
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(0, []), ty: Closure(Region(3), [Region(2)], [Ref(Region(2), Nat, Not)], Ref(Region(2), Nat, Not)) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([Region(1)], [Ref(Region(1), Nat, Not)], Ref(Region(1), Nat, Not)), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Array, 17560580047052612315): AdtLayout { adt: AdtId(Array, 17560580047052612315), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Array, 17560580047052612315), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(Atomic, 7944917567764537563): AdtLayout { adt: AdtId(Atomic, 7944917567764537563), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Atomic, 7944917567764537563), index: 0 }, fields: [Param(0)] }] }, AdtId(Bool, 1212688576893102294): AdtLayout { adt: AdtId(Bool, 1212688576893102294), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 1 }, fields: [] }] }, AdtId(Comp, 5865758043995769001): AdtLayout { adt: AdtId(Comp, 5865758043995769001), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Comp, 5865758043995769001), index: 0 }, fields: [Unit, Unit] }, VariantLayout { ctor: CtorId { adt: AdtId(Comp, 5865758043995769001), index: 1 }, fields: [Unit, Unit, Adt(AdtId(Comp, 5865758043995769001), [IndexTerm(Var(1))]), Fn([], [Unit], Adt(AdtId(Comp, 5865758043995769001), [IndexTerm(Var(2))]))] }] }, AdtId(Eq, 7478576897359074100): AdtLayout { adt: AdtId(Eq, 7478576897359074100), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Eq, 7478576897359074100), index: 0 }, fields: [] }] }, AdtId(List, 18281496015322716214): AdtLayout { adt: AdtId(List, 18281496015322716214), variants: [VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 1 }, fields: [Param(0), Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(Mutex, 11502663489156599097): AdtLayout { adt: AdtId(Mutex, 11502663489156599097), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Mutex, 11502663489156599097), index: 0 }, fields: [Param(0)] }] }, AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }] }, AdtId(RefCell, 16116052685739653519): AdtLayout { adt: AdtId(RefCell, 16116052685739653519), variants: [VariantLayout { ctor: CtorId { adt: AdtId(RefCell, 16116052685739653519), index: 0 }, fields: [Param(0)] }] }, AdtId(Slice, 17243552778994937024): AdtLayout { adt: AdtId(Slice, 17243552778994937024), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Slice, 17243552778994937024), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(VecDyn, 5672451972718783331): AdtLayout { adt: AdtId(VecDyn, 5672451972718783331), variants: [VariantLayout { ctor: CtorId { adt: AdtId(VecDyn, 5672451972718783331), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }} } }

MirBody safe_id_ref
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(1, []), ty: Closure(Region(1), [], [Nat], Fn([], [Nat], Nat)) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Nat], Fn([], [Nat], Nat)), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Array, 17560580047052612315): AdtLayout { adt: AdtId(Array, 17560580047052612315), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Array, 17560580047052612315), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(Atomic, 7944917567764537563): AdtLayout { adt: AdtId(Atomic, 7944917567764537563), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Atomic, 7944917567764537563), index: 0 }, fields: [Param(0)] }] }, AdtId(Bool, 1212688576893102294): AdtLayout { adt: AdtId(Bool, 1212688576893102294), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 1 }, fields: [] }] }, AdtId(Comp, 5865758043995769001): AdtLayout { adt: AdtId(Comp, 5865758043995769001), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Comp, 5865758043995769001), index: 0 }, fields: [Unit, Unit] }, VariantLayout { ctor: CtorId { adt: AdtId(Comp, 5865758043995769001), index: 1 }, fields: [Unit, Unit, Adt(AdtId(Comp, 5865758043995769001), [IndexTerm(Var(1))]), Fn([], [Unit], Adt(AdtId(Comp, 5865758043995769001), [IndexTerm(Var(2))]))] }] }, AdtId(Eq, 7478576897359074100): AdtLayout { adt: AdtId(Eq, 7478576897359074100), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Eq, 7478576897359074100), index: 0 }, fields: [] }] }, AdtId(List, 18281496015322716214): AdtLayout { adt: AdtId(List, 18281496015322716214), variants: [VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 1 }, fields: [Param(0), Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(Mutex, 11502663489156599097): AdtLayout { adt: AdtId(Mutex, 11502663489156599097), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Mutex, 11502663489156599097), index: 0 }, fields: [Param(0)] }] }, AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }] }, AdtId(RefCell, 16116052685739653519): AdtLayout { adt: AdtId(RefCell, 16116052685739653519), variants: [VariantLayout { ctor: CtorId { adt: AdtId(RefCell, 16116052685739653519), index: 0 }, fields: [Param(0)] }] }, AdtId(Slice, 17243552778994937024): AdtLayout { adt: AdtId(Slice, 17243552778994937024), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Slice, 17243552778994937024), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(VecDyn, 5672451972718783331): AdtLayout { adt: AdtId(VecDyn, 5672451972718783331), variants: [VariantLayout { ctor: CtorId { adt: AdtId(VecDyn, 5672451972718783331), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }} } }

MirBody use_mut
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(0, []), ty: Closure(Region(3), [Region(2)], [Ref(Region(2), Nat, Mut)], Nat) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([Region(1)], [Ref(Region(1), Nat, Mut)], Nat), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Array, 17560580047052612315): AdtLayout { adt: AdtId(Array, 17560580047052612315), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Array, 17560580047052612315), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(Atomic, 7944917567764537563): AdtLayout { adt: AdtId(Atomic, 7944917567764537563), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Atomic, 7944917567764537563), index: 0 }, fields: [Param(0)] }] }, AdtId(Bool, 1212688576893102294): AdtLayout { adt: AdtId(Bool, 1212688576893102294), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 1 }, fields: [] }] }, AdtId(Comp, 5865758043995769001): AdtLayout { adt: AdtId(Comp, 5865758043995769001), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Comp, 5865758043995769001), index: 0 }, fields: [Unit, Unit] }, VariantLayout { ctor: CtorId { adt: AdtId(Comp, 5865758043995769001), index: 1 }, fields: [Unit, Unit, Adt(AdtId(Comp, 5865758043995769001), [IndexTerm(Var(1))]), Fn([], [Unit], Adt(AdtId(Comp, 5865758043995769001), [IndexTerm(Var(2))]))] }] }, AdtId(Eq, 7478576897359074100): AdtLayout { adt: AdtId(Eq, 7478576897359074100), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Eq, 7478576897359074100), index: 0 }, fields: [] }] }, AdtId(List, 18281496015322716214): AdtLayout { adt: AdtId(List, 18281496015322716214), variants: [VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 1 }, fields: [Param(0), Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(Mutex, 11502663489156599097): AdtLayout { adt: AdtId(Mutex, 11502663489156599097), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Mutex, 11502663489156599097), index: 0 }, fields: [Param(0)] }] }, AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }] }, AdtId(RefCell, 16116052685739653519): AdtLayout { adt: AdtId(RefCell, 16116052685739653519), variants: [VariantLayout { ctor: CtorId { adt: AdtId(RefCell, 16116052685739653519), index: 0 }, fields: [Param(0)] }] }, AdtId(Slice, 17243552778994937024): AdtLayout { adt: AdtId(Slice, 17243552778994937024), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Slice, 17243552778994937024), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(VecDyn, 5672451972718783331): AdtLayout { adt: AdtId(VecDyn, 5672451972718783331), variants: [VariantLayout { ctor: CtorId { adt: AdtId(VecDyn, 5672451972718783331), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }} } }

MirBody use_shared
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(0, []), ty: Closure(Region(3), [Region(2)], [Ref(Region(2), Nat, Not)], Nat) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([Region(1)], [Ref(Region(1), Nat, Not)], Nat), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Array, 17560580047052612315): AdtLayout { adt: AdtId(Array, 17560580047052612315), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Array, 17560580047052612315), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(Atomic, 7944917567764537563): AdtLayout { adt: AdtId(Atomic, 7944917567764537563), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Atomic, 7944917567764537563), index: 0 }, fields: [Param(0)] }] }, AdtId(Bool, 1212688576893102294): AdtLayout { adt: AdtId(Bool, 1212688576893102294), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Bool, 1212688576893102294), index: 1 }, fields: [] }] }, AdtId(Comp, 5865758043995769001): AdtLayout { adt: AdtId(Comp, 5865758043995769001), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Comp, 5865758043995769001), index: 0 }, fields: [Unit, Unit] }, VariantLayout { ctor: CtorId { adt: AdtId(Comp, 5865758043995769001), index: 1 }, fields: [Unit, Unit, Adt(AdtId(Comp, 5865758043995769001), [IndexTerm(Var(1))]), Fn([], [Unit], Adt(AdtId(Comp, 5865758043995769001), [IndexTerm(Var(2))]))] }] }, AdtId(Eq, 7478576897359074100): AdtLayout { adt: AdtId(Eq, 7478576897359074100), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Eq, 7478576897359074100), index: 0 }, fields: [] }] }, AdtId(List, 18281496015322716214): AdtLayout { adt: AdtId(List, 18281496015322716214), variants: [VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(List, 18281496015322716214), index: 1 }, fields: [Param(0), Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(Mutex, 11502663489156599097): AdtLayout { adt: AdtId(Mutex, 11502663489156599097), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Mutex, 11502663489156599097), index: 0 }, fields: [Param(0)] }] }, AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }] }, AdtId(RefCell, 16116052685739653519): AdtLayout { adt: AdtId(RefCell, 16116052685739653519), variants: [VariantLayout { ctor: CtorId { adt: AdtId(RefCell, 16116052685739653519), index: 0 }, fields: [Param(0)] }] }, AdtId(Slice, 17243552778994937024): AdtLayout { adt: AdtId(Slice, 17243552778994937024), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Slice, 17243552778994937024), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }, AdtId(VecDyn, 5672451972718783331): AdtLayout { adt: AdtId(VecDyn, 5672451972718783331), variants: [VariantLayout { ctor: CtorId { adt: AdtId(VecDyn, 5672451972718783331), index: 0 }, fields: [Adt(AdtId(List, 18281496015322716214), [Param(0)])] }] }} } }

BorrowCheck id_ref
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck safe_id_ref
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck use_mut
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck use_shared
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
