cli/tests/snapshots/pipeline_golden__golden_pipeline_repeated_fn_calls.snap
---
source: cli/tests/pipeline_golden.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef use_fn_twice
  ty: Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn)
  val: Lam(Ind("Nat", []), LetE(Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn), Lam(Ind("Nat", []), Var(0), Default, Fn), LetE(Ind("Nat", []), App(Var(0), Var(1)), App(Var(1), Var(2)))), Default, Fn)

ElaboratedDef use_fnmut_twice
  ty: Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn)
  val: Lam(Ind("Nat", []), LetE(Pi(Ind("Nat", []), Ind("Nat", []), Default, FnMut), Lam(Ind("Nat", []), Var(0), Default, FnMut), LetE(Ind("Nat", []), App(Var(0), Var(1)), App(Var(1), Var(2)))), Default, Fn)

MirBody use_fn_twice
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(1, []), ty: Closure(Region(1), [], [Nat], Nat) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Nat], Nat), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody use_fnmut_twice
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(1, []), ty: Closure(Region(1), [], [Nat], Nat) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Nat], Nat), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

BorrowCheck use_fn_twice
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck use_fnmut_twice
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
